<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="fill_parent" android:background="#0099cc"
    tools:context="isst.fraunhofer.de.ompi.activities.TemplateActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/send_title"
                android:id="@+id/textTitle"
                android:layout_gravity="center_horizontal|top"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/send_text"
                android:id="@+id/textText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sending_text"
                android:id="@+id/sending"
                android:layout_gravity="center|bottom"
                android:visibility="invisible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/send_error"
                android:id="@+id/error"
                android:layout_gravity="center|bottom"
                android:textColor="#ffff3123"
                android:visibility="invisible" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/black_overlay" android:orientation="horizontal"
        tools:ignore="UselessParent">

        <Button android:id="@+id/dummy_next_button" style="?metaButtonBarButtonStyle"
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:layout_weight="1" android:text="Start"
            android:nestedScrollingEnabled="false" />

    </LinearLayout>

</FrameLayout>
