<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#0099cc"
    tools:context="isst.fraunhofer.de.ompi.activities.TemplateActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/textTitle"
                android:layout_gravity="center_horizontal|top"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/validation_error"
                android:id="@+id/validationError"
                android:layout_gravity="center|bottom"
                android:textColor="#ffff3123"
                android:visibility="invisible" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:id="@+id/tableLayout"
                android:layout_marginTop="20dp"
                android:shrinkColumns="1">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <EditText
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/editText2"
                        android:singleLine="true"
                        android:selectAllOnFocus="true"
                        android:imeOptions="flagNoExtractUi"
                        android:layout_gravity="left|top"
                        android:autoText="false"
                        android:visibility="invisible" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/registrierung_id1_text"
                        android:id="@+id/textView2"
                        android:layout_gravity="center_horizontal|top"
                        android:visibility="invisible" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|left" >

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/regId1"
                        android:maxLength="1"
                        android:singleLine="true"
                        android:selectAllOnFocus="true"
                        android:imeOptions="flagNoExtractUi"
                        android:layout_gravity="left|top"
                        android:autoText="false"
                        android:inputType="textCapCharacters" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/registrierung_id1_text"
                        android:id="@+id/textView3"
                        android:layout_gravity="center_horizontal|left|top"
                        android:inputType="text|textMultiLine" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:baselineAligned="false"
                    android:measureWithLargestChild="false" >

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/regId2"
                        android:maxLength="2"
                        android:singleLine="true"
                        android:selectAllOnFocus="true"
                        android:imeOptions="flagNoExtractUi"
                        android:layout_gravity="left|top"
                        android:autoText="false"
                        android:inputType="text|numberDecimal" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/registrierung_id2_text"
                        android:id="@+id/textView4"
                        android:layout_gravity="left|top"
                        android:inputType="textMultiLine" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="left">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/regId3"
                        android:maxLength="1"
                        android:singleLine="true"
                        android:selectAllOnFocus="true"
                        android:imeOptions="flagNoExtractUi"
                        android:layout_gravity="left|top"
                        android:autoText="false"
                        android:inputType="textCapCharacters" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/registrierung_id3_text"
                        android:id="@+id/textView5"
                        android:layout_gravity="center_horizontal|left|top"
                        android:inputType="text|textMultiLine" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/regId4"
                        android:maxLength="1"
                        android:singleLine="true"
                        android:selectAllOnFocus="true"
                        android:imeOptions="flagNoExtractUi"
                        android:layout_gravity="left|top"
                        android:autoText="false"
                        android:inputType="textCapCharacters" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/registrierung_id4_text"
                        android:id="@+id/textView6"
                        android:layout_gravity="center_horizontal|left|top"
                        android:inputType="text|textMultiLine" />
                </TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/radio_titel"
                    android:id="@+id/textView12"
                    android:layout_marginTop="15dp" />

                <RadioGroup
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/radioSex"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_male"/>

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_female"
                        android:checked="true"/>

                    </RadioGroup>
            </TableLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/black_overlay" android:orientation="horizontal"
        tools:ignore="UselessParent">

        <Button android:id="@+id/dummy_next_button" style="?metaButtonBarButtonStyle"
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:layout_weight="1" android:text="Start"
            android:nestedScrollingEnabled="false" />

    </LinearLayout>

</FrameLayout>
